changes in grid section

--- a/index.html
+++ b/index.html
@@ -274,26 +274,22 @@
         <h2 class="gallery">Gallery</h2>
         <div class="grid-box">
           <div class="grid-item1 grid-img">
-            <img class="width-100" src="./assets/images/grid1.png" alt="#" />
+            <img src="./assets/images/grid1.png" alt="#" width="100%" />
           </div>
           <div class="grid-item2 grid-img">
-            <img class="width-100" src="./assets/images/grid2.png" alt="#" />
+            <img src="./assets/images/grid2.png" alt="#" width="100%" />
           </div>
           <div class="grid-item3 grid-img">
-            <img class="width-100" src="./assets/images/grid3-ver.png" alt="" />
+            <img src="./assets/images/grid3-ver.png" alt="#" width="100%" />
           </div>
           <div class="grid-item4 grid-img">
-            <img
-              class="width-100"
-              src="./assets/images/grid4-hoz.png"
-              alt="#"
-            />
+            <img src="./assets/images/grid4-hoz.png" alt="#" width="100%" />
           </div>
           <div class="grid-item5 grid-img">
-            <img class="width-100" src="./assets/images/grid5.png" alt="#" />
+            <img src="./assets/images/grid5.png" alt="#" width="100%" />
           </div>
           <div class="grid-item6 grid-img">
-            <img class="width-100" src="./assets/images/grid6.png" alt="#" />
+            <img src="./assets/images/grid6.png" alt="#" width="100%" />
           </div>
         </div>
       </div>
