--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -217,7 +217,7 @@
               />
             </svg>
 
-            <p class="para2">
+            <h6 class="para2">
               Semper faucibus suscipit ultricies eleifend semper sit tellus
               gravida pretium. Cras cursus ut semper eleifend tortor lectus
               tristique turpis. Laoreet amet ultrices est lectus accumsan nibh
@@ -228,11 +228,15 @@
               pretium, massa volutpat convallis nisl pellentesque. Gravida in
               ultrices vitae tortor. Dignissim viverra volutpat neque gravida
               aliquet urna faucibus viverra vulputate.
-            </p>
+            </h6>
           </div>
           <div class="col-12 col-lg-6 d-flex justify-content-center">
             <div class="position-rlt1">
-              <img class="w-100" src="./assets/images/Rectangle2.png" alt="#" />
+              <img
+                class="w-100"
+                src="./assets/images/Rectangle2.png"
+                alt="Rectangle2"
+              />
               <div class="position-abs1">
                 <svg
                   width="64"
@@ -274,22 +278,22 @@
         <h2 class="gallery">Gallery</h2>
         <div class="grid-box">
           <div class="grid-item1 grid-img">
-            <img src="./assets/images/grid1.png" alt="#" width="100%" />
+            <img src="./assets/images/grid1.png" alt="#" class="w-100" />
           </div>
           <div class="grid-item2 grid-img">
-            <img src="./assets/images/grid2.png" alt="#" width="100%" />
+            <img src="./assets/images/grid2.png" alt="#" class="w-100" />
           </div>
           <div class="grid-item3 grid-img">
-            <img src="./assets/images/grid3-ver.png" alt="#" width="100%" />
+            <img src="./assets/images/grid3-ver.png" alt="#" class="w-100" />
           </div>
           <div class="grid-item4 grid-img">
-            <img src="./assets/images/grid4-hoz.png" alt="#" width="100%" />
+            <img src="./assets/images/grid4-hoz.png" alt="#" class="w-100" />
           </div>
           <div class="grid-item5 grid-img">
-            <img src="./assets/images/grid5.png" alt="#" width="100%" />
+            <img src="./assets/images/grid5.png" alt="#" class="w-100" />
           </div>
           <div class="grid-item6 grid-img">
-            <img src="./assets/images/grid6.png" alt="#" width="100%" />
+            <img src="./assets/images/grid6.png" alt="#" class="w-100" />
           </div>
         </div>
       </div>
@@ -648,7 +652,9 @@
             <div class="d-flex gap-3 pt-4">
               <img src="./assets/images/Rectangle6.png" alt="#" />
               <img src="./assets/images/Rectangle7.png" alt="#" />
-              <div class="last-box"><h3 class="show-more">Show More</h3></div>
+              <div class="last-box">
+                <h3 class="show-more">Show More</h3>
+              </div>
             </div>
           </div>
         </div>
