--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     </section>
     <!-- section-3 -->
     <section>
-      <div class="container">
+      <div class="container mb-5">
         <div class="d-flex justify-content-center mt-150">
           <svg
             width="115"
@@ -547,7 +547,7 @@
     <!-- footer-section -->
     <footer class="bg-black">
       <div class="container">
-        <div class="row d-flex align-items-center">
+        <div class="row d-flex align-items-center pt-5">
           <div class="col-12 col-lg-4 pt-5 pb-5">
             <img src="./assets/images/footer-earth.png" alt="#" />
             <span class="event">Events</span><span class="free">Free</span>
@@ -642,7 +642,7 @@
             </ul>
           </div>
           <!-- gallery -->
-          <div class="col-12 col-lg-4 col-md-6">
+          <div class="col-12 col-lg-4 col-md-6 pt-5">
             <h3 class="gallery2">GALLERY</h3>
             <div class="d-flex gap-3 pt-3">
               <img src="./assets/images/Rectangle3.png" alt="#" />
